dev/patch.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-demo-deploy
spec:
  replicas: 2
