dev/kube-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-demo-ingress
  namespace: kube-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kube-demo-dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-demo-svc
                port:
                  number: 9090
